<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editRecipeRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:background="#00000000"
        android:contentDescription="@string/save_recipe"
        android:onClick="save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/savebutton_selector" />

    <ImageButton
        android:id="@+id/delRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/delete_button_selector"
        android:contentDescription='@string/delete_recipe'
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/MainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:stretchColumns="*">

            <TableRow
                android:id="@+id/TitleField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_vertical"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/recipeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:backgroundTint="@color/main_logo"
                    android:breakStrategy="simple"
                    android:clickable="true"
                    android:ems="10"
                    android:focusable="true"
                    android:hint="@string/recipe_name"
                    android:inputType="textShortMessage|textLongMessage|none"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textIsSelectable="true"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/tagConstraintEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.helper.widget.Flow
                        android:id="@+id/add_recipe_tags"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:flow_horizontalBias=".1"
                        app:flow_horizontalGap="10dp"
                        app:flow_horizontalStyle="packed"
                        app:flow_verticalAlign="center"
                        app:flow_verticalGap="10dp"
                        app:flow_wrapMode="chain"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/manage_tag_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.helper.widget.Flow
                        android:id="@+id/manage_tags"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        app:flow_horizontalBias=".1"
                        app:flow_horizontalGap="20dp"
                        app:flow_horizontalStyle="spread"
                        app:flow_verticalAlign="center"
                        app:flow_verticalGap="15dp"
                        app:flow_wrapMode="chain"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <include
                    layout="@layout/photo_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/IngredientHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/ingredients"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="34sp" />

                <ImageButton
                    android:id="@+id/AddIngredientButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/add_ingredient"
                    android:onClick="addIngredient"
                    android:padding="10dp"
                    android:scaleX="1"
                    android:scaleY="1"
                    app:srcCompat="@drawable/additem_selector" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/IngredientContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <include
                        layout="@layout/ingredient_field"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="#00FFFFFF" />
                </LinearLayout>

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/InstructionHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="3"
                    android:text="@string/directions"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="34sp" />

                <ImageButton
                    android:id="@+id/AddDirectionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/add_direction"
                    android:onClick="addDirection"
                    android:padding="10dp"
                    android:scaleX="1"
                    android:scaleY="1"
                    app:srcCompat="@drawable/additem_selector"
                    tools:ignore="SpeakableTextPresentCheck" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/DirectionContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <include layout="@layout/instruction_field" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:id="@+id/buffer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="500dp"></TableRow>

        </TableLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>
