...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/searchRecipeName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:gravity="start"
                android:hint="@string/search"
                android:importantForAutofill="no"
...
            android:layout_height="300sp"
            android:layout_marginTop="20dp"
            app:layout_column="0"
            app:layout_row="3">

            <comp3350.chefsnotes.presentation.FullListView
                android:id="@+id/results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />
        </ScrollView>

        <View
...
