...
    <string name="new_recipe">New Recipe</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="delete_direction">Delete Direction</string>
    <string name="direction_title">Direction Title</string>
    <string name="direction_description">Direction Description</string>
    <string name="ok">Yes</string>
    <string name="no">No</string>
    <string name="confirm_delete">Are you sure you want to delete this recipe?
        This cannot be undone.</string>
    <string name="search_mode_name">Search for any part of a recipe name</string>
    <string name="search_mode_ing">Separate multiple ingredients by semi-colons</string>
    <string name="camera_button">Camera</string>
...
