...
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/recipeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="135dp"
            android:gravity="start"
            android:textAlignment="textStart"
            android:textColor="#000000"
...
                    layout="@layout/photo_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5" />

                <EditText
                    android:id="@+id/Notes"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/editbox_background_normal"
                    android:ems="10"
                    android:hint="Add Notes"
...
